--- a/src/pages/fr/install/auto.mdx
+++ b/src/pages/fr/install/auto.mdx
@@ -51,7 +51,7 @@ Exécutez la commande suivante dans votre terminal pour démarrer notre assistan
   </Fragment>
 </PackageManagerTabs>
 
-Vous pouvez exécuter `create astro` n'importe où sur votre machine, il n'est donc pas nécessaire de créer un nouveau répertoire vide pour votre projet avant de commencer. Si vous n'avez pas encore de répertoire vide pour votre nouveau projet, l'assistant créera automatiquement un pour vous.
+Vous pouvez exécuter `create astro` n'importe où sur votre machine, il n'est donc pas nécessaire de créer un nouveau répertoire vide pour votre projet avant de commencer. Si vous n'avez pas encore de répertoire vide pour votre nouveau projet, l'assistant en créera automatiquement un pour vous.
 
 Si tout se passe bien, vous devriez voir un message "Ready for liftoff!" suivi de quelques "Étapes suivantes". Exécutez `cd` vers votre nouveau répertoire pour commencer à utiliser Astro.
 
