--- a/src/pages/fr/install/auto.mdx
+++ b/src/pages/fr/install/auto.mdx
@@ -61,7 +61,7 @@ Si vous avez manqué l'étape `npm install` durant l'assistant `create-astro`, v
 
 Avec Astro, vous disposez d'un serveur de développement intégré qui regroupe toutes les fonctionnalités nécessaires pour la réalisation de votre projet. La commande `astro dev` démarrera le serveur de développement local pour que vous puissiez voir votre nouveau site web en action pour la toute première fois.
 
-Chaque modèle de départ est livré avec un script préconfiguré qui exécutera `astro dev`` pour vous. Utilisez votre gestionnaire de paquets préféré pour exécuter cette commande et démarrer le serveur de développement d'Astro.
+Chaque modèle de départ est livré avec un script préconfiguré qui exécutera `astro dev` pour vous. Utilisez votre gestionnaire de paquets préféré pour exécuter cette commande et démarrer le serveur de développement d'Astro.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
