correct wrong translation - save of the century
Co-authored-by: pioupia <49518790+pioupia@users.noreply.github.com>

--- a/src/pages/fr/install/auto.mdx
+++ b/src/pages/fr/install/auto.mdx
@@ -110,7 +110,7 @@ Vous pouvez également démarrer un nouveau projet Astro basé sur un dépôt Gi
 </PackageManagerTabs>
 
 
-Explorez notre [galerie de thèmes et de modèles de démarrage](https://astro.build/themes/) où vous pouvez parcourir des thèmes pour des blogs, des portfolios, de la documentation, des pages d'atterrissage, et plus encore! Ou, [recherchez sur GitHub](https://github.com/search?o=desc&q=astro+starter&s=stars&type=Repositories) pour encore plus de projets de démarrage.
+Explorez notre [galerie de thèmes et de modèles de démarrage](https://astro.build/themes/) où vous pouvez parcourir des thèmes pour des blogs, des portfolios, de la documentation, des landing page, et plus encore ! Ou, [recherchez sur GitHub](https://github.com/search?o=desc&q=astro+starter&s=stars&type=Repositories) pour encore plus de projets de démarrage.
 
 ## Étapes Suivantes
 
