update recently edited pages

--- a/src/pages/fr/install/auto.mdx
+++ b/src/pages/fr/install/auto.mdx
@@ -3,20 +3,21 @@ title: Installation d'Astro avec l'ILC automatique
 description: "Comment installer Astro avec NPM, PNPM, ou Yarn via l'outil de création create-astro inclus dans l'ILC."
 layout: ~/layouts/MainLayout.astro
 ---
-import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
 
-Prêt à installer Astro ? Suivez notre guide d'installation automatique ou manuel pour commencer.
+Prêt à installer Astro ? Suivez ce guide pour utiliser la CLI `create astro` pour commencer.
+
+:::note[Vous préférez installer Astro manuellement ?]
+Lisez plutôt notre [guide d'installation manuelle étape par étape](/fr/install/manual/) à la place.
+:::
 
 #### Prérequis
 
 - **Node.js** - version `v16.12.0` ou supérieure.
 - **Éditeur de code** - Nous recommandons [VS Code](https://code.visualstudio.com/) avec notre [extension officielle Astro](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode).
 - **Console de terminal** - Astro est accessible via son interface par ligne de commande (ILC).
-
-<InstallGuideTabGroup />
 
 #### Installation
 
