--- a/src/pages/fr/install/manual.mdx
+++ b/src/pages/fr/install/manual.mdx
@@ -3,11 +3,15 @@ title: Installer Astro manuellement
 description: 'Comment installer Astro manuellement avec NPM, PNPM, ou Yarn.'
 layout: ~/layouts/MainLayout.astro
 ---
+import Button from '~/components/Button.astro'
 import FileTree from '~/components/FileTree.astro';
-import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
+Ce guide vous montrera comment installer et configurer manuellement un nouveau projet Astro si vous préférez ne pas utiliser [l'outil de ligne de commande automatique](/fr/install/auto/).
 
+##### Vous préférez une méthode plus rapide pour commencer?
+
+<Button href="/fr/install/auto/">Essayez l'assistant de CLI `create astro` →</Button>
 
 Prêt à installer Astro ? Suivez notre guide d'installation automatique ou manuel pour commencer.
 
@@ -16,8 +20,6 @@ Prêt à installer Astro ? Suivez notre guide d'installation automatique ou manu
 - **Node.js** - version `v16.12.0` ou supérieure.
 - **Éditeur de code** - Nous recommandons [VS Code](https://code.visualstudio.com/) avec notre [extension officielle Astro](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode).
 - **Console de terminal** - Astro est accessible via son interface de ligne de commande (ILC).
-
-<InstallGuideTabGroup />
 
 #### Installation
 
