i18n(pt-BR): Update `cli-reference.mdx` and `vercel.mdx` translations

--- a/src/pages/pt-br/guides/deploy/vercel.mdx
+++ b/src/pages/pt-br/guides/deploy/vercel.mdx
@@ -58,7 +58,7 @@ Você pode fazer o deploy na Vercel através da interface do site ou da CLI (int
 3. A Vercel vai detectar automaticamente o seu site Astro e irá definir as configurações corretas.
 4. O deploy de sua aplicação está feito! (ex. [astro.vercel.app](https://astro.vercel.app/))
 
-Depois que seu projeto foi importado e o deploy foi feito, todos os pushs subsequentes para branches vão gerar [Deploys de Visualização](https://vercel.com/docs/concepts/deployments/environments#preview) e todas as alterações feitas na branch de produção (geralmente “main”) resultarão em um [Deploy de Produção](https://vercel.com/docs/concepts/deployments/environments#production).
+Depois que seu projeto foi importado e o deploy foi feito, todos os pushs subsequentes para branches vão gerar [Deploys de Visualização](https://vercel.com/docs/concepts/deployments/preview-deployments) e todas as alterações feitas na branch de produção (geralmente “main”) resultarão em um [Deploy de Produção](https://vercel.com/docs/concepts/deployments/environments#production).
 
 📚 Saiba mais sobre a [Integração da Vercel com o Git](https://vercel.com/docs/concepts/git).
 
