--- a/src/pages/ja/guides/content.mdx
+++ b/src/pages/ja/guides/content.mdx
@@ -8,7 +8,7 @@ i18nReady: true
 ---
 Astroは、コンテンツ重視のサイト（ブログ、マーケティングサイト、ポートフォリオなど）に最適です。
 
-Astroは、コンテンツの執筆と公開に役立ちます。Markdown/MDXを使ってAstroで直接ブログ記事を書いたり、ヘッドレスCMSからコンテンツを取得できます。Astroは、ページにレイアウトを追加したり、記事のインデックスを作成したり、RSSフィードを設定して読者に購読してもらたり、コンテンツを中心にサイトを構築できます。
+Astroは、コンテンツの執筆と公開に役立ちます。Markdown/MDXを使ってAstroで直接ブログ記事を書いたり、ヘッドレスCMSからコンテンツを取得できます。Astroは、ページにレイアウトを追加したり、記事のインデックスを作成したり、RSSフィードを設定して読者に購読してもらえたり、コンテンツを中心にサイトを構築できます。
 
 ## コンテンツの執筆
 
