update of manual.mdx and auto.mdx

--- a/src/pages/es/install/manual.mdx
+++ b/src/pages/es/install/manual.mdx
@@ -4,20 +4,22 @@ description: 'Cómo instalar Astro manualmente con NPM, PNPM, o Yarn.'
 layout: ~/layouts/MainLayout.astro
 i18nReady: true
 ---
-
+import Button from '~/components/Button.astro'
 import FileTree from '~/components/FileTree.astro';
 import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
 
-¿Listo para instalar Astro? Sigue nuestra guía de instalación automática o manual para empezar.
+Esta guía te guíara paso a paso para instalar manualmentey configurar un nuevo proyecto Astro si prefieres no usar la [la herramienta CLI automática](/es/install/auto/).
+
+#### ¿Prefieres una forma más rápida de empezar?
+
+<Button href="/en/install/auto/">Try the create astro CLI wizard →</Button>
 
 #### Prerrequisitos
 
 - **Node.js** - `v16.12.0` o mayor.
 - **Editor de código** - Recomendamos [VS Code](https://code.visualstudio.com/) con nuestra [extensión oficial de Astro](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode).
 - **Terminal** - Astro es usado a través de la interfaz de línea de comandos (CLI).
-
-<InstallGuideTabGroup />
 
 #### Instalación
 
