--- a/src/pages/es/install/auto.mdx
+++ b/src/pages/es/install/auto.mdx
@@ -6,19 +6,17 @@ description: >-
 layout: ~/layouts/MainLayout.astro
 i18nReady: true
 ---
-import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-
-¿Listo para instalar Astro? Sigue nuestra guía de instalación automática o manual para empezar.
+:::note[¿Prefieres instalar Astro manualmente?]
+Lee nuestra [guía de instalación manual paso a paso](/es/install/manual/) en su lugar.
+:::
 
 #### Prerrequisitos
 
 - **Node.js** - `v16.12.0` o mayor.
 - **Editor de código** - Recomendamos [VS Code](https://code.visualstudio.com/) con nuestra [extensión oficial de Astro](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode).
 - **Terminal** - Astro es usado a través de la interfaz de línea de comandos (CLI).
-
-<InstallGuideTabGroup />
 
 #### Instalación
 
