--- a/src/pages/es/install/manual.mdx
+++ b/src/pages/es/install/manual.mdx
@@ -13,7 +13,7 @@ Esta guía te guíara paso a paso para instalar manualmentey configurar un nuevo
 
 #### ¿Prefieres una forma más rápida de empezar?
 
-<Button href="/en/install/auto/">Try the create astro CLI wizard →</Button>
+<Button href="/es/install/auto/">Try the create astro CLI wizard →</Button>
 
 #### Prerrequisitos
 
