--- a/src/pages/es/install/manual.mdx
+++ b/src/pages/es/install/manual.mdx
@@ -9,7 +9,7 @@ import FileTree from '~/components/FileTree.astro';
 import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
 
-Esta guía te guíara paso a paso para instalar manualmentey configurar un nuevo proyecto Astro si prefieres no usar la [la herramienta CLI automática](/es/install/auto/).
+Esta guía te guíara paso a paso para instalar manualmente y configurar un nuevo proyecto de Astro si prefieres no usar la [la herramienta CLI automática](/es/install/auto/).
 
 #### ¿Prefieres una forma más rápida de empezar?
 
