i18n(es): Update of `framework-components.mdx`, `integrations-guide.mdx`, `auto.mdx`, `manual.mdx`, `integrations.mdx` & `api-reference.mdx`  (#2367)
* multiple updates

* fixed link

* fixed typos

* added missing part and fixed link

* fixed link

* update of manual.mdx and auto.mdx

* Update src/pages/es/install/manual.mdx

* Apply suggestions from code review

Co-authored-by: Kevin Zuniga Cuellar <46791833+kevinzunigacuellar@users.noreply.github.com>

--- a/src/pages/es/install/auto.mdx
+++ b/src/pages/es/install/auto.mdx
@@ -6,11 +6,11 @@ description: >-
 layout: ~/layouts/MainLayout.astro
 i18nReady: true
 ---
-import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-
-¿Listo para instalar Astro? Sigue nuestra guía de instalación automática o manual para empezar.
+:::note[¿Prefieres instalar Astro manualmente?]
+Lee nuestra [guía de instalación manual paso a paso](/es/install/manual/) en su lugar.
+:::
 
 #### Prerrequisitos
 
@@ -18,11 +18,9 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 - **Editor de código** - Recomendamos [VS Code](https://code.visualstudio.com/) con nuestra [extensión oficial de Astro](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode).
 - **Terminal** - Astro es usado a través de la interfaz de línea de comandos (CLI).
 
-<InstallGuideTabGroup />
-
 #### Instalación
 
-`create-astro` es la forma más rápida y fácil de comenzar un nuevo proyecto en Astro. Serás guiado paso a paso para configurar tu nuevo proyecto de Astro. Podrás elegir entre algunas plantillas de inicio o puedes proveer una tú mismo usando el argumento `--template`.
+`create astro` es la forma más rápida y fácil de comenzar un nuevo proyecto en Astro. Serás guiado paso a paso para configurar tu nuevo proyecto de Astro. Podrás elegir entre algunas plantillas de inicio oficiales o puedes [usar cualquier proyecto existente en Github con el argumento `--template`](#plantillas-de-inicio).
 
 :::tip[Previsualizaciones en línea]
 ¿Prefieres probar Astro en tu navegador? Visita [astro.new](https://astro.new/) para ver nuestras plantillas y crear un proyecto de Astro solamente usando tu navegador.
@@ -30,7 +28,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 ## 1. Ejecuta el Asistente de Configuración
 
-Ejecuta el siguiente comando en tu terminal para iniciar el asistente de instalación, `create-astro`.
+Ejecuta el siguiente comando en tu terminal para iniciar el asistente de instalación:
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -53,11 +51,11 @@ Ejecuta el siguiente comando en tu terminal para iniciar el asistente de instala
   </Fragment>
 </PackageManagerTabs>
 
-Puedes ejecutar `create-astro` en cualquier carpeta de tu computadora, así que no es necesario crear un directorio vacío antes de inicializar tu proyecto. Si aún no tienes un directorio designado para tu nuevo proyecto, el asistente creará uno por ti.
+Puedes ejecutar `create astro` en cualquier carpeta de tu computadora, así que no es necesario crear un directorio vacío antes de inicializar tu proyecto. Si aún no tienes un directorio designado para tu nuevo proyecto, el asistente creará uno por ti.
 
 Si todo ha salido bien, deberías ver un mensaje "Ready for liftoff!" seguido de algunas recomendaciones de próximos pasos, "Next steps". Entra en el nuevo directorio de tu proyecto usando `cd` y empieza a utilizar Astro.
 
-Si has omitido el paso de `npm install` durante el asistente `create-astro`, asegúrate de instalar las dependencias antes de continuar.
+Si has omitido el paso de `npm install` durante el asistente CLI, asegúrate de instalar las dependencias antes de continuar.
 
 ## 2. Inicia Astro ✨
 
@@ -88,6 +86,30 @@ Cada plantilla de inicio posee un script preconfigurado que ejecutará `astro de
 Astro escuchará cualquier cambio en la carpeta `src/` y actualizará automáticamente tu proyecto. De esta forma, no será necesario reiniciar el servidor local durante el desarrollo.
 
 Si no es posible abrir el proyecto en el navegador, regresa a la terminal donde has ejecutado el comando `dev` y chequea si ha ocurrido algún error o si tu proyecto está siendo servido en una URL diferente a la mencionada anteriormente.
+
+## Plantillas de Inicio
+
+También comenzar un proyecto nuevo de Astro basado en un repositorio de GitHub existente pasando el argumento `--template` al comando `create astro`.
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm create astro@latest -- --template <github-username>/<github-repo>
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm create astro@latest --template <github-username>/<github-repo>
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn create astro --template <github-username>/<github-repo>
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+Explora nuestros [temas y proyectos de inicio](https://astro.build/themes/) donde puedes navegar por temas para blogs, portafolios, documentación, páginas de inicio y más. ¡O, [busca en GitHub](https://github.com/search?o=desc&q=astro+starter&s=stars&type=Repositories) para más proyectos de inicio!
 
 ## Siguientes pasos
 
