--- a/src/pages/es/install/manual.mdx
+++ b/src/pages/es/install/manual.mdx
@@ -4,12 +4,16 @@ description: 'Cómo instalar Astro manualmente con NPM, PNPM, o Yarn.'
 layout: ~/layouts/MainLayout.astro
 i18nReady: true
 ---
-
+import Button from '~/components/Button.astro'
 import FileTree from '~/components/FileTree.astro';
 import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
 
-¿Listo para instalar Astro? Sigue nuestra guía de instalación automática o manual para empezar.
+Esta guía te guíara paso a paso para instalar manualmente y configurar un nuevo proyecto de Astro si prefieres no usar la [la herramienta CLI automática](/es/install/auto/).
+
+#### ¿Prefieres una forma más rápida de empezar?
+
+<Button href="/es/install/auto/">Try the create astro CLI wizard →</Button>
 
 #### Prerrequisitos
 
@@ -17,11 +21,9 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
 - **Editor de código** - Recomendamos [VS Code](https://code.visualstudio.com/) con nuestra [extensión oficial de Astro](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode).
 - **Terminal** - Astro es usado a través de la interfaz de línea de comandos (CLI).
 
-<InstallGuideTabGroup />
-
 #### Instalación
 
-Si prefieres no usar el asistente de instalación automático `create-astro`, puedes instalar y configurar Astro manualmente siguiendo las instrucciones a continuación:
+Si prefieres no usar el asistente de instalación automático `create astro`, puedes instalar y configurar Astro manualmente siguiendo las instrucciones a continuación:
 
 ## 1. Crea una carpeta donde guardar todos los archivos
 
