Update half of Nuxt article to match Next and Gatsby

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -8,19 +8,17 @@ framework: NuxtJS
 import AstroVueTabs from '~/components/tabs/AstroVueTabs.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-[NuxtJS](https://nuxtjs.org) is a framework for building web applications on top of Vue.
-
 Here are some key concepts and migration strategies to help you get started. Use the rest of our docs and our [Discord community](https://astro.build/chat) to keep going!
 
 ## Key Similarities between Nuxt and Astro
 
 Nuxt and Astro share some similarities that will help you migrate your project:
 
-- Both Nuxt and Astro are modern Javascript static-site generators with similar project file structures. Both use a `src/` folder for your project files and a special `src/pages/` folder for file-based routing. Creating and managing pages for your site should feel familiar.
-
-- Astro has [an official integration for using Vue components](/en/guides/integrations-guide/vue/) and support for NPM packages and community integrations, including Vue libraries. You will be able to write Vue UI components for interactivity, and may be able to keep some or all of your existing Nuxt Vue components and dependencies.
-
-- Astro and Nuxt both allow you to use Headless CMSs, APIs or Markdown files for data. You can continue to use your preferred authoring system, and will be able to keep your existing content.
+- Astro projects can also be SSG or [SSR with page level prerendering](/en/guides/server-side-rendering/#prerendering).
+- Astro uses file-based routing, and [allows specially named pages to create dynamic routes](/en/core-concepts/routing/#dynamic-routes).
+- Astro is [component-based](/en/core-concepts/components/), and your markup structure will be similar before and after your migration.
+- Astro has [an official integration for using Vue components](/en/guides/integrations-guide/vue/).
+- Astro has support for [installing NPM packages](/en/guides/imports/#npm-packages), including Vue libraries. You may be able to keep some or all of your existing Vue components and dependencies.
 
 ## Key Differences between Nuxt and Astro
 
@@ -39,31 +37,42 @@ Each project migration will look different. But, there are some common steps you
 Even after following these instructions, you probably won't have your new Astro site exactly the way you want it yet. But, this page will get you started in the right direction.
 
 ### Create a new Astro project
+Use the `create astro` command for your package manager to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes).
 
-Use `npm create astro@latest` to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes). 
 
-
-You can also pass a `--template` argument to the `create-astro` command to start from an existing Astro repository on GitHub:
+You can also pass a `--template` argument to the `create astro` command to start from an existing Astro repository on GitHub:
 
   <PackageManagerTabs>
     <Fragment slot="npm">
     ```shell
+    # launch the Astro CLI Wizard 
+    npm create astro@latest
+
+    # start from any existing repo
     npm create astro -- --template <github-username>/<github-repo>
     ```
     </Fragment>
     <Fragment slot="pnpm">
     ```shell
+    # launch the Astro CLI Wizard 
+    pnpm create astro@latest
+
+    # start from any existing repo
     pnpm create astro --template <github-username>/<github-repo>
     ```
     </Fragment>
     <Fragment slot="yarn">
     ```shell
+    # launch the Astro CLI Wizard 
+    yarn create astro@latest
+
+    # start from any existing repo
     yarn create astro --template <github-username>/<github-repo>
     ```
     </Fragment>
   </PackageManagerTabs>
 
-Then, copy your existing Gatsby project files over to your new Astro project into a separate folder outside of `src`.
+Then, copy your existing Nuxt project files over to your new Astro project in a separate folder outside of `src`.
 
 :::tip
 Prefer to explore in your browser instead? Visit https://astro.new for a variety of starter templates that can be opened and edited in StackBlitz, CodeSandbox or Gitpod.
@@ -192,24 +201,24 @@ Compare the following Nuxt component and a corresponding Astro component:
 
 ### Migrating Layout Files
 
-In Astro, your layout must include a full page shell (`<html>`, `<head>` and `<body>` tags). Your Nuxt `layout.vue` and templates will not include these. 
+You may find it helpful to start by converting your Nuxt layouts and templates into [Astro layout components](/en/core-concepts/layouts/).
 
-You can use the following code to provide these extra elements around an existing Nuxt layout file, or write your own:
+Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be present, so it is common to reuse a layout file across pages. Your Nuxt `layout.vue` and templates will not include these.
+
+Note the standard HTML templating, and direct access to `<head>`:  
 
 ```astro title="src/layouts/Layout.astro"
----
----
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Astro</title>
+  </head>
+  <body>
+    <!-- Wrap the slot element with your existing layout templating -->
+    <slot />
+  </body>
 </html>
 ```
 
@@ -217,13 +226,13 @@ You may also wish to reuse code from [your Nuxt's page's `head` property](https:
 
 ### Migrating Pages and Posts
 
-In NuxtJS, your posts live in `/pages`. In Astro, **all your page content must live within `src/`**.
+In NuxtJS, your [pages](/en/core-concepts/pages/) live in `/pages`. In Astro, **all your page content must live within `src/`**.
 
 #### Vue Pages
 
 Your existing Nuxt Vue (`.vue`) pages will need to be [converted from Vue files to `.astro` pages](#convert-vue-files-to-astro-files). You cannot use an existing Vue page file in Astro.
 
-These `.astro` pages must be located within `src/pages/` and will have page routes generated automatically based on their file path.
+These [`.astro` pages](/en/core-concepts/pages/) must be located within `src/pages/` and will have page routes generated automatically based on their file path.
 
 ##### Dynamic File Path Naming
 
