Improve Nuxt dynamic page migration

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -7,6 +7,7 @@ framework: NuxtJS
 ---
 import AstroVueTabs from '~/components/tabs/AstroVueTabs.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+import FileTree from '~/components/FileTree.astro'
 
 Here are some key concepts and migration strategies to help you get started. Use the rest of our docs and our [Discord community](https://astro.build/chat) to keep going!
 
@@ -236,8 +237,26 @@ These [`.astro` pages](/en/core-concepts/pages/) must be located within `src/pag
 
 ##### Dynamic File Path Naming
 
-{/* Change _name.vue to [name].astro */}
+In Nuxt, your dynamic pages use an underscore to represent a dynamic page property that's then passed to the page generation:
 
+<FileTree>
+- pages/
+  - pokemon/
+    - _name.vue
+  - index.vue
+- nuxt.config.js
+</FileTree>
+
+In Astro, we change this underscored dynamic path property (`_name.vue`) to be wrapped in a pair of brackets (`[name].astro`):
+
+<FileTree>
+- src/
+  - pages/
+    - pokemon/
+      - [name].astro
+    - index.astro
+- astro.config.mjs
+</FileTree>
 
 
 #### Markdown and MDX pages
