Improve Imports, Links, Image sections for Nuxt

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -310,7 +310,7 @@ To bind an attribute or component property in an Astro component, change this sy
 
 ### Nuxt Links to Astro
 
-Convert any Nuxt `<NuxtLink to="">`components to HTML `<a href="">` tags. 
+Convert any Nuxt `<NuxtLink to="">` components to HTML `<a href="">` tags. 
 
 ```astro del={1} ins={2}
 <NuxtLink to="/blog">Blog</Link>
@@ -328,7 +328,7 @@ const { to } = Astro.props
 
 ### Nuxt Imports to Astro
 
-If necesssary, update any file imports to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full.
+If necessary, update any [file imports](/en/guides/imports/) to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full. 
 
 Note that `.astro` and several other file types must be imported with their full file extension.
 
@@ -498,7 +498,19 @@ See more about [Styling in Astro](/en/guides/styling/).
 
 ### Nuxt Image Plugin to Astro
 
-Convert any [Nuxt `<nuxt-img/>` or `<nuxt-picture/>` components](https://image.nuxtjs.org/components/nuxt-img) with [Astro's own image integration components](/en/guides/images/#astros-image-integration), or with a standard HTML `<img>` tag.
+Convert any [Nuxt `<nuxt-img/>` or `<nuxt-picture/>` components](https://image.nuxtjs.org/components/nuxt-img) with [Astro's own image integration components](/en/guides/images/#astros-image-integration), or with a standard HTML `<img>`. See a [full list of component attributes](/en/guides/integrations-guide/image/#usage) available for Astro's `<Image />` and `<Picture />` components, and note that several will differ from Nuxt's attributes. 
+
+```astro title="src/pages/index.astro"
+---
+import { Image } from '@astrojs/image/components';
+import localImage from "../images/brand/logo.png";
+import rocket from '../images/rocket.svg';
+---
+<Image src={localImage} alt="The Astro Logo" />
+<img src={rocket} alt="A rocketship in space.">
+```
+
+In Vue (`.vue`) components, use standard JSX image syntax (`<img />`). Astro will not optimize these images, but you can install and use NPM packages for more flexibility.
 
 You can learn more about [using images in Astro](/en/guides/images/) in the Images Guide.
 
