update astro component docs

--- a/src/pages/en/core-concepts/astro-components.mdx
+++ b/src/pages/en/core-concepts/astro-components.mdx
@@ -95,7 +95,8 @@ const myFavoritePokemon = [/* ... */];
 <!-- Use props and other variables from the component script: -->
 <p>My favorite pokemon is: {Astro.props.title}</p>
 
-<!-- Include other components with a `client:` directive to hydrate: -->
+<!-- Use imported components like any other UI frameworks  -->
+<!-- and hydrate them by adding a `client` directive`: -->
 <ReactPokemonComponent client:visible />
 
 <!-- Mix HTML with JavaScript expressions, similar to JSX: -->
