--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -10,93 +10,39 @@ import FileTree from '~/components/FileTree.astro'
 
 This guide will help you migrate from Astro v1 to Astro v2.
 
-Need to upgrade an older project to v1? See our [older migration guide](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx).
+Need to upgrade an older project to v1? See our [older migration guide](/en/guides/upgrade-to/v1/).
 
 ## Upgrade Astro
 
-1. You can check your version of Astro, and any official Astro integrations (`@astrojs/*`), in `package.json` at the root of your project. These may be in `devDependencies` and/or `dependencies`:
+Update your project's version of Astro to the latest version using your package manager. If you're using Astro integrations, please also update those to the latest version.
 
-    ```json "@astrojs/" {7}
-    //package.json
-    "devDependencies": {
-      "@astrojs/react": "^1.2.2",
-      "@astrojs/svelte": "^1.0.2",
-      "@astropub/icons": "^0.1.1",
-      "accessible-astro-components": "^1.4.5",
-      "astro": "1.9.2",
-      "react": "^18.2.0",
-      "react-dom": "^18.0.0",
-      "svelte": "^3.47.0"
-    },
-    "dependencies": {
-      "@astrojs/image": "0.13.0-beta.0",
-      "@astrojs/rss": "^2.0.0",
-      "@astrojs/vue": "^1.2.1",
-      "vue": "^3.2.41"
-    }
-    ```
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  # upgrades to Astro v2.x:
+  npm install astro@latest
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  # upgrades to Astro v2.x:
+  pnpm install astro@latest
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  # upgrades to Astro v2.x:
+  yarn add astro@latest
+  ```
+  </Fragment>
+</PackageManagerTabs>
 
-2. Update your project's version of Astro to the latest version using your package manager. If you're using Astro integrations, please also update those to the latest version.
+## Astro 2.0 Breaking Changes
 
-    <PackageManagerTabs>
-      <Fragment slot="npm">
-      ```shell
-      # upgrades to Astro v2.x:
-      npm install astro@latest
-      ```
-      </Fragment>
-      <Fragment slot="pnpm">
-      ```shell
-      # upgrades to Astro v2.x:
-      pnpm install astro@latest
-      ```
-      </Fragment>
-      <Fragment slot="yarn">
-      ```shell
-      # upgrades to Astro v2.x:
-      yarn add astro@latest
-      ```
-      </Fragment>
-    </PackageManagerTabs>
-
-3. Check that you are running **at least Node `16.12.0`**. In v2.0, Astro dropped support for Node `14`.
-
-    ```sh
-    node -v
-    ```
-    
-    If necessary, [update your version of Node](#removed-support-for-node-14) in your local and deployment environments.
-
-## Update your code
-
-Many projects will not need any changes to the codebase. Your upgrade may now be complete! But, this upgrade does bring some breaking changes:
-
-- **the complete removal of several previously-deprecated items**
-
-  Still using one of the [deprecated options mentioned below](#astro-20-breaking-changes)? Replace them with their current equivalent!
-
-- **a new, unified location for your built assets**
-
-  Have a [deploy config that depends on chunks](#changed-_astro-folder-for-build-assets)? See where your built assets are now!
-
-- **a redesign of Markdown and MDX plugin configuration**
-
-  Using plugins in [Markdown](#changed-markdown-plugin-configuration) and [MDX](#changed-mdx-plugin-configuration)? Convert your config with our updated flags!
-
-- **a new, reserved folder `src/content/` for the new Collections API**
-
-  Have [an existing folder called `src/content/`](#reserved-srccontent)? Rename it to avoid conflicts!
-
-- **three exciting features that are no longer experimental**
-
-  You [no longer need these flags](#astro-20-experimental-flags-removed) to get the goodies. Remove them from your Astro configuration!
-
-If your project doesn't work as expected after upgrading to v2.0, then check this guide for major highlights and instructions on how to handle breaking changes when upgrading from v1.x and v2.0-beta releases. 
+Astro v2.0 includes some breaking changes, as well as the removal of some previously deprecated features. If your project doesn't work as expected after upgrading to v2.0, check this guide for an overview of all breaking changes and instructions on how to update your codebase.
 
 See [the changelog](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md) for full release notes.
 
-
-## Astro 2.0 Breaking Changes
 
 ### Updated: Vite 4
 
@@ -104,9 +50,7 @@ Astro v2.0 upgrades from Vite 3 to [Vite 4](https://vitejs.dev/), released in De
 
 #### What should I do?
 
-There should be no changes to your code necessary! Enjoy [many internal improvements under the hood](https://vitejs.dev/blog/announcing-vite4.html), without changing a thing.
-
-We've handled most of the upgrade for you inside of Astro; however, some subtle Vite behaviors may still change between versions. 
+There should be no changes to your code necessary! We've handled most of the upgrade for you inside of Astro; however, some subtle Vite behaviors may still change between versions. 
 
 Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.html) if you run into trouble.
 
@@ -156,8 +100,6 @@ export default defineConfig({
 
 If you were using this feature in 1.x, we recommend [using the MDX integration](/en/guides/integrations-guide/mdx/) which allows you to include components and JSX expressions in your Markdown.
 
-See our older upgrade guide for more about [converting existing Markdown files to MDX](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx#converting-existing-md-files-to-mdx).
-
 ### Removed: `Astro.resolve()`
 
 In 0.24, Astro deprecated `Astro.resolve()` for getting resolved URLs to assets that you might want to reference in the browser.
@@ -177,8 +119,6 @@ import imageUrl from './image.png';
 
 <img src={imageUrl} />
 ```
-
-See the [v0.24 upgrade guide](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx#deprecated-astroresolve) for more information.
 
 ### Removed: `Astro.fetchContent()`
 
@@ -395,7 +335,7 @@ Astro v2.0 brings some new features from experimental flags into the core codeba
 
 #### What should I do?
 
-Remove the following previously-experimental flags from `astro.config.mjs`:
+Remove the following experimental flags from `astro.config.mjs`:
 
 ```js del={5-7}
 // astro.config.mjs
@@ -416,4 +356,4 @@ These features are now available by default:
 
 ## Known Issues
 
-
+There are currently no known issues.
