fix more errors

--- a/src/pages/en/guides/data-fetching.mdx
+++ b/src/pages/en/guides/data-fetching.mdx
@@ -46,7 +46,7 @@ Your deployed Astro site will fetch data **once, at build time**. In dev, you wi
 The `fetch()` function is also globally available to any [framework components](/en/core-concepts/framework-components/):
 
 ```tsx title="src/components/Movies.tsx" /await fetch\\(.*?\\)/
-import type { FunctionalComponent } from 'preact';
+import type { FunctionComponent } from 'preact';
 import { h } from 'preact';
 
 const data = await fetch('https://example.com/movies.json').then((response) =>
@@ -57,7 +57,7 @@ const data = await fetch('https://example.com/movies.json').then((response) =>
 // When rendered with a client:* directive, they also log to the browser console.
 console.log(data);
 
-const Movies: FunctionalComponent = () => {
+const Movies: FunctionComponent = () => {
 // Output the result to the page
   return <div>{JSON.stringify(data)}</div>;
 };
