--- a/src/pages/es/guides/data-fetching.mdx
+++ b/src/pages/es/guides/data-fetching.mdx
@@ -46,7 +46,7 @@ Cuando tu proyecto de Astro es desplegado obtendrá los datos **una vez, en el m
 La función `fetch()` también está disponible globalmente para cualquier [componente de framework](/es/core-concepts/framework-components/):
 
 ```tsx title="src/components/Movies.tsx" /await fetch\\(.*?\\)/
-import type { FunctionalComponent } from 'preact';
+import type { FunctionComponent } from 'preact';
 import { h } from 'preact';
 
 const data = await fetch('https://example.com/movies.json').then((response) =>
@@ -57,7 +57,7 @@ const data = await fetch('https://example.com/movies.json').then((response) =>
 // Cuando se renderizan con una directiva client:*, se registran en la consola del navegador.
 console.log(data);
 
-const Movies: FunctionalComponent = () => {
+const Movies: FunctionComponent = () => {
 // Envía el resultado a la página.
   return <div>{JSON.stringify(data)}</div>;
 };
