--- a/src/pages/ja/guides/data-fetching.mdx
+++ b/src/pages/ja/guides/data-fetching.mdx
@@ -83,7 +83,7 @@ Astroコンポーネントのすべてのデータは、コンポーネントが
 
 ```tsx
 // Movies.tsx
-import type { FunctionalComponent } from 'preact';
+import type { FunctionComponent } from 'preact';
 import { h } from 'preact';
 
 const data = await fetch('https://example.com/movies.json').then((response) =>
@@ -94,7 +94,7 @@ const data = await fetch('https://example.com/movies.json').then((response) =>
 // client:*ディレクティブでレンダリングされた場合、ブラウザコンソールにもログが出力されます。
 console.log(data);
 
-const Movies: FunctionalComponent = () => {
+const Movies: FunctionComponent = () => {
   // 結果をページに出力する
   return <div>{JSON.stringify(data)}</div>;
 };
