--- a/src/pages/pt-br/guides/data-fetching.mdx
+++ b/src/pages/pt-br/guides/data-fetching.mdx
@@ -39,7 +39,7 @@ const usuarioAleatorio = dados.results[0];
 A função `fetch()` também está globalmente disponível a qualquer [componente de framework](/pt-br/core-concepts/framework-components/):
 
 ```tsx title="src/components/Filmes.tsx" /await fetch\\(.*?\\)/
-import type { FunctionalComponent } from 'preact';
+import type { FunctionComponent } from 'preact';
 import { h } from 'preact';
 
 const dados = await fetch('https://exemplo.com/filmes.json').then((resposta) =>
@@ -50,7 +50,7 @@ const dados = await fetch('https://exemplo.com/filmes.json').then((resposta) =>
 // Quando renderizado com uma diretiva client:*, eles também irão fazer logs no console do navegador.
 console.log(dados);
 
-const Filmes: FunctionalComponent = () => {
+const Filmes: FunctionComponent = () => {
 // Exibe o resultado na página
   return <div>{JSON.stringify(dados)}</div>;
 };
