--- a/src/pages/zh-cn/guides/data-fetching.mdx
+++ b/src/pages/zh-cn/guides/data-fetching.mdx
@@ -85,7 +85,7 @@ const weather = json.data
 
 ```tsx
 // Movies.tsx
-import type { FunctionalComponent } from 'preact';
+import type { FunctionComponent } from 'preact';
 import { h } from 'preact';
 
 const data = await fetch('https://example.com/movies.json').then((response) =>
@@ -96,7 +96,7 @@ const data = await fetch('https://example.com/movies.json').then((response) =>
 // 当用 client:* 指令渲染时，它们也会输出到浏览器控制台。
 console.log(data);
 
-const Movies: FunctionalComponent = () => {
+const Movies: FunctionComponent = () => {
 // Output the result to the page
   return <div>{JSON.stringify(data)}</div>;
 };
