revert changes to pages

--- a/src/pages/de/guides/data-fetching.mdx
+++ b/src/pages/de/guides/data-fetching.mdx
@@ -45,7 +45,7 @@ Deine veröffentlichte Astro-Website ruft Daten **einmalig während des Erstellu
 Die `fetch()`-Funktion ist auch global in jeder [Framework-Komponente](/de/core-concepts/framework-components/) verfügbar:
 
 ```tsx title="src/components/Movies.tsx" /await fetch\\(.*?\\)/
-import type { FunctionComponent } from 'preact';
+import type { FunctionalComponent } from 'preact';
 import { h } from 'preact';
 
 const data = await fetch('https://example.com/movies.json').then((response) =>
@@ -56,7 +56,7 @@ const data = await fetch('https://example.com/movies.json').then((response) =>
 // Wenn sie mit einer client:*-Direktive gerendert werden, wird dies auch in der Browser-Konsole angezeigt.
 console.log(data);
 
-const Movies: FunctionComponent = () => {
+const Movies: FunctionalComponent = () => {
 // Ausgabe des Ergebnisses in die Seite
   return <div>{JSON.stringify(data)}</div>;
 };
