--- a/src/pages/fr/guides/data-fetching.mdx
+++ b/src/pages/fr/guides/data-fetching.mdx
@@ -85,7 +85,7 @@ La fonction `fetch()` est également disponible dans tous les [composants de Fra
 
 ```tsx
 // Exemple: src/components/Movies.tsx
-import type { FunctionComponent } from 'preact';
+import type { FunctionalComponent } from 'preact';
 import { h } from 'preact';
 
 const data = await fetch('https://example.com/movies.json').then((response) =>
@@ -96,7 +96,7 @@ const data = await fetch('https://example.com/movies.json').then((response) =>
 // Les composants qui sont rendus avec une directive "client:*" écrivent également dans la console du navigateur.
 console.log(data);
 
-const Movies: FunctionComponent = () => {
+const Movies: FunctionalComponent = () => {
   // Affiche le résultat sur la page
   return <div>{JSON.stringify(data)}</div>;
 };
