Add blog post about migration from Gridsome
Extend community resources list for "Migrating from Gridsome" page with new community content

--- a/src/pages/en/guides/migrate-to-astro/from-gridsome.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gridsome.mdx
@@ -66,4 +66,4 @@ To convert other types of sites, such as a portfolio or documentation site, see 
 
 ## Community Resources
 
-- Add your own!
+- Blog Post: [Migration from Gridsome to Astro](https://fyodor.io/migration-from-gridsome-to-astro/).
