Feat: adding a little part of my translation of markdown-content.mdx file

--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -60,7 +60,7 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 
 ## Mises en page Markdown/MDX
 
-Les mises en page sont particulièrement utiles pour [les pages Markdown et MDX](/fr/guides/markdown-content/#markdown-and-mdx-pages) qui, autrement, n'auraient pas de formatage de page.
+Les mises en page sont particulièrement utiles pour [les pages Markdown et MDX](/fr/guides/markdown-content/#pages-markdown-et-mdx) qui, autrement, n'auraient pas de formatage de page.
 
 Astro fournit une propriété spéciale `layout` frontmatter pour spécifier le composant `.astro` à utiliser comme mise en page.
 
@@ -159,7 +159,7 @@ Astro.props = {
 ```
 
 :::note
-Une mise en page Markdown/MDX aura accès à toutes les [propriétés exportées de son fichier](/fr/guides/markdown-content/#exported-properties) depuis `Astro.props` **avec quelques différences essentielles :**
+Une mise en page Markdown/MDX aura accès à toutes les [propriétés exportées de son fichier](/fr/guides/markdown-content/#propriétés-exportées) depuis `Astro.props` **avec quelques différences essentielles :**
 
 *   Informations sur l'en-tête (c.-à-d. les éléments `h1 -> h6`) sont disponibles via le tableau `headings`, plutôt qu'une fonction `getHeadings()`.
 
