Fix: Check links failed

--- a/src/pages/fr/guides/markdown-content.mdx
+++ b/src/pages/fr/guides/markdown-content.mdx
@@ -86,6 +86,46 @@ export default defineConfig({
 Vous pouvez aussi passer le flag `--drafts` lors de l'exécution de `astro build` pour construire les Pages brouillons !
 :::
 
+## Fonctionnalités de Markdown
+
+Astro fournit des fonctionnalités Markdown supplémentaires et intégrées disponibles lors de l'utilisation de fichiers Markdown et MDX.
+
+### Le frontmatter `layout`
+
+Astro fourni aux pages Markdown et MDX une propriété spéciale `layout` frontmatter qui peut spécifier un chemin relatif (ou [alias](/fr/guides/aliases/)) à un [composant de mise en page Astro](/fr/core-concepts/layouts/#mises-en-page-markdownmdx).
+
+**`src/pages/posts/post-1.md`**
+
+```markdown {2}
+---
+layout: ../../layouts/BlogPostLayout.astro
+title: Astro en bref
+author: Himanshu
+description: Découvrez ce qui rend Astro génial !
+--- 
+Cet article est écrit en Markdown.
+```
+
+Les propriétés frontmatter sont disponibles pour la mise en page via `Astro.props` :
+
+**`src/layouts/BlogPostLayout.astro`**
+
+```astro /frontmatter(?:.\w+)?/
+---
+const {frontmatter} = Astro.props;
+---
+<html>
+  <!-- ... -->
+  <h1>{frontmatter.title}</h1>
+  <h2>Auteur de l'article : {frontmatter.author}</h2>
+  <p>{frontmatter.description}<p>
+  <slot /> <!-- Le contenu Markdown est injecté ici -->
+   <!-- ... -->
+</html>
+```
+
+📚 En savoir plus à propos des [mises en page Markdown](/fr/core-concepts/layouts/#mises-en-page-markdownmdx).
+
 ## Pages Markdown
 
 Astro traite n'importe quel fichier `.md` à l'intérieur du répertoire `/src/pages` comme un composant de Page. Placer un fichier dans ce répertoire ou dans un sous-répertoire construira automatiquement une route vers cette page en utilisant le chemin du fichier.
@@ -363,7 +403,7 @@ const posts = await Astro.glob<Frontmatter>('../pages/post/*.md');
 ### Propriétés exportées
 
 :::note[Vous utilisez une mise en page Astro ?]
-Voir les [propriétés exportées vers un composant de mise en page Astro](/en/core-concepts/layouts/#markdown-layout-props) en utilisant la [mise en page spéciale d'Astro pour le frontmatter](#frontmatter-layout).
+Voir les [propriétés exportées vers un composant de mise en page Astro](/fr/core-concepts/layouts/#propriétés-de-mise-en-page-markdown) en utilisant la [mise en page spéciale d'Astro pour le frontmatter](#le-frontmatter-layout).
 :::
 
 ## Composant Markdown
