new: `rssSchema` instructions

--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -99,6 +99,18 @@ export async function get(context) {
 The `link` property of each feed item can be computed from the content entry `slug`. See [our guide on generating pages from content collections](https://docs.astro.build/en/guides/content-collections/#generating-pages-from-content-collections) to see how slugs correspond to routes.
 :::
 
+`@astrojs/rss` also exposes an `rssSchema` for use with collection schemas. This ensures your frontmatter contains all properties expected by an RSS feed item. You can apply this schema to your content config like so:
+
+```js title="src/content/config.ts" "rssSchema"
+import { rssSchema } from '@astrojs/rss';
+
+const blog = defineCollection({
+  schema: rssSchema,
+});
+
+export const collections = { blog };
+```
+
 ### 2. List of RSS feed objects
 
 We recommend this option for `.md` files outside of the `pages` directory. This is common when generating routes [via `getStaticPaths`](/en/reference/api-reference/#getstaticpaths).
