chore: consistent highlights

--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -40,8 +40,7 @@ Now, let's generate our first RSS feed! Create an `rss.xml.js` file under your `
 
 Next, import the `rss` helper from the `@astrojs/rss` package and call with the following parameters:
 
-```js
-// src/pages/rss.xml.js
+```js title="src/pages/rss.xml.js"
 import rss from '@astrojs/rss';
 
 export function get(context) {
@@ -117,8 +116,7 @@ You may generate an RSS feed from documents in `src/pages/`. Since `Astro.glob` 
 
 You can apply `pagesGlobToRssItems()` like so. This function assumes that you are globbing for items inside `src/pages/`, and all necessary feed properties are present in each document's frontmatter.
 
-```ts "pagesGlobToRssItems"
-// src/pages/rss.xml.js
+```js title="src/pages/rss.xml.js" "pagesGlobToRssItems"
 import rss, { pagesGlobToRssItems } from '@astrojs/rss';
 
 export function get(context) {
@@ -178,7 +176,7 @@ export function get(context) {
   return rss({
     title: 'Buzz’s Blog',
     description: 'A humble Astronaut’s guide to the stars',
-    site: import.meta.env.SITE,
+    site: context.site,
     items: posts.map((post) => ({
       link: post.url,
       content: sanitizeHtml(post.compiledContent()),
